; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_shwdt.c_sh_wdt_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_shwdt.c_sh_wdt_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shwdt_lock = common dso_local global i32 0, align 4
@timer = common dso_local global i32 0, align 4
@WTCSR_TME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sh_wdt_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sh_wdt_stop() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = load i64, i64* %2, align 8
  %4 = call i32 @spin_lock_irqsave(i32* @shwdt_lock, i64 %3)
  %5 = call i32 @del_timer(i32* @timer)
  %6 = call i32 (...) @sh_wdt_read_csr()
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* @WTCSR_TME, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %1, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %1, align 4
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @sh_wdt_write_csr(i32 %11)
  %13 = load i64, i64* %2, align 8
  %14 = call i32 @spin_unlock_irqrestore(i32* @shwdt_lock, i64 %13)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @del_timer(i32*) #1

declare dso_local i32 @sh_wdt_read_csr(...) #1

declare dso_local i32 @sh_wdt_write_csr(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
